--- a/peak_view.html
+++ b/peak_view.html
@@ -22,7 +22,7 @@
     <!-- End layout styles -->
     <link rel="shortcut icon" href="assets/images/favicon.png" />
   </head>
-
+  <body>
   <div class="container-fluid page-body-wrapper">
         <!-- partial:partials/_navbar.html -->
         <nav class="navbar p-0 fixed-top d-flex flex-row">
@@ -169,7 +169,8 @@
               <div class="card">
                 <div class="card-body">
                   <h6 class="card-title"> Sleep </h6>
-                  <img src="assets/images/sleepquality_ring.png" alt="Not Found">  
+                  <canvas id="transaction-history" class="transaction-chart"></canvas>
+                  <!-- <img src="assets/images/sleepquality_ring.png" alt="Not Found">   -->
                 </div>
               </div>
             </div>
@@ -177,7 +178,8 @@
               <div class="card">
                 <div class="card-body">
                   <h6 class="card-title"> Readiness </h6>
-                  <img src="assets/images/sleepquality_ring.png" alt="Not Found">  
+                  <canvas id="readiness" class="readiness-score"></canvas>
+                  <!-- <img src="assets/images/sleepquality_ring.png" alt="Not Found">  --> 
                 </div>
               </div>
             </div>
@@ -185,7 +187,8 @@
               <div class="card">
                 <div class="card-body">
                   <h6 class="card-title"> Calorie Intake </h6>
-                  <img src="assets/images/sleepquality_ring.png" alt="Not Found">  
+                  <canvas id="calories" class="calorie-intake"></canvas>
+                  <!-- <img src="assets/images/sleepquality_ring.png" alt="Not Found"> -->  
                 </div>
               </div>
             </div>
@@ -202,3 +205,24 @@
           </div>
         </div>
       </div>
+      <script src="assets/vendors/js/vendor.bundle.base.js"></script>
+    <!-- endinject -->
+    <!-- Plugin js for this page -->
+    <script src="assets/vendors/chart.js/Chart.min.js"></script>
+    <script src="assets/vendors/progressbar.js/progressbar.min.js"></script>
+    <script src="assets/vendors/jvectormap/jquery-jvectormap.min.js"></script>
+    <script src="assets/vendors/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+    <script src="assets/vendors/owl-carousel-2/owl.carousel.min.js"></script>
+    <!-- End plugin js for this page -->
+    <!-- inject:js -->
+    <script src="assets/js/off-canvas.js"></script>
+    <script src="assets/js/hoverable-collapse.js"></script>
+    <script src="assets/js/misc.js"></script>
+    <script src="assets/js/settings.js"></script>
+    <script src="assets/js/todolist.js"></script>
+    <!-- endinject -->
+    <!-- Custom js for this page -->
+    <script src="assets/js/dashboard.js"></script>
+    <!-- End custom js for this page -->
+  </body>
+</html>
