Change default delection text color to white

--- a/permission.html
+++ b/permission.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Corona Admin</title>
+    <title>Permission Setting</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.base.css">
@@ -109,15 +109,15 @@
                     <p class="card-description"> Please modify user's permission with caution</p>
                     <div class="form-group">
                       <label for="exampleFormControlSelect2">Individual Athlete Data</label>
-                      <select class="form-control" id="exampleFormControlSelect2">
-                        <option>View</option>
+                      <select class="form-control" id="exampleFormControlSelect2" style="color: white;">
+                        <option >View</option>
                         <option>Edit</option>
                         <option>No Access</option>
                       </select>
                     </div>
                     <div class="form-group">
                       <label for="exampleFormControlSelect2">All Athlete Data</label>
-                      <select class="form-control" id="exampleFormControlSelect2">
+                      <select class="form-control" id="exampleFormControlSelect2" style="color: white;">
                         <option>View</option>
                         <option>Edit</option>
                         <option>No Access</option>
@@ -125,7 +125,7 @@
                     </div>
                     <div class="form-group">
                       <label for="exampleFormControlSelect2">Team Data</label>
-                      <select class="form-control" id="exampleFormControlSelect2">
+                      <select class="form-control" id="exampleFormControlSelect2" style="color: white;">
                         <option>View</option>
                         <option>Edit</option>
                         <option>No Access</option>
@@ -133,7 +133,7 @@
                     </div>
                     <div class="form-group">
                       <label for="exampleFormControlSelect2">Notes to Coaches</label>
-                      <select class="form-control" id="exampleFormControlSelect2">
+                      <select class="form-control" id="exampleFormControlSelect2" style="color: white;">
                         <option>View</option>
                         <option>Send</option>
                         <option>No Access</option>
@@ -141,28 +141,28 @@
                     </div>
                     <div class="form-group">
                       <label for="exampleFormControlSelect2">Athlete File</label>
-                      <select class="form-control" id="exampleFormControlSelect2">
+                      <select class="form-control" id="exampleFormControlSelect2" style="color: white;">
                         <option>Edit</option>
                         <option>No Access</option>
                       </select>
                     </div>
                     <div class="form-group">
                       <label for="exampleFormControlSelect2">New Account</label>
-                      <select class="form-control" id="exampleFormControlSelect2">
+                      <select class="form-control" id="exampleFormControlSelect2" style="color: white;">
                         <option>Add and Edit</option>
                         <option>No Access</option>
                       </select>
                     </div>
                     <div class="form-group">
                       <label for="exampleFormControlSelect2">Delete and Update Account</label>
-                      <select class="form-control" id="exampleFormControlSelect2">
+                      <select class="form-control" id="exampleFormControlSelect2" style="color: white;">
                         <option>Access Granted</option>
                         <option>No Access</option>
                       </select>
                     </div>
                     <div class="form-group">
                       <label for="exampleFormControlSelect2">Permissions Acess</label>
-                      <select class="form-control" id="exampleFormControlSelect2">
+                      <select class="form-control" id="exampleFormControlSelect2" style="color: white;">
                         <option>Access Granted to Change Permissions</option>
                         <option>No Access</option>
                       </select>
