Calories views + corrections
Added calories views and changed some labels in restfulness

--- a/caloriesView.html
+++ b/caloriesView.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Restfullness</title>
+    <title>Calories Intake</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.base.css">
@@ -191,7 +191,7 @@
                 <div class="col-sm-6 grid-margin">
                     <div class="card">
                         <div class="card-body">
-                          <h5>Restfullness Today</h5>
+                          <h5>Calories Intake Today</h5>
                           <div class="row">
                             <div class="col-8 col-sm-12 col-xl-12 my-auto">
                               <div class="d-flex d-sm-block d-md-flex align-items-center">
@@ -205,7 +205,7 @@
       const sleepChart = new Chart(ctx4, {
           type: 'doughnut',
           data: {
-              labels: ['Restfulness'],
+              labels: ['Calories'],
               datasets: [{
                   label: '# of Votes',
                   data: [70,30],
@@ -244,7 +244,7 @@
                 <div class="col-sm-6 grid-margin">
                     <div class="card">
                         <div class="card-body">
-                            <h5>Restfulness Trend</h5>
+                            <h5>Calories Intake Trend</h5>
                             <div class="row">
                         <div class="col-8 col-sm-12 col-xl-12 my-auto">
                           
@@ -260,7 +260,7 @@ const trendsplayer = new Chart(ctxplayer, {
         labels: ['9/4', '9/11', '9/18', '9/25', '10/2', '10/9'],
         datasets: [
                          {
-                  label: 'Restfulness',
+                  label: 'Calories',
                   data: [60, 70, 40, 90, 56, 70],
                   
                   borderColor: 
@@ -290,7 +290,7 @@ const trendsplayer = new Chart(ctxplayer, {
             <div class="row-12">
                 <div class="card">
                     <div class="card-body">
-                        <h3>Restfullness Notes</h3>
+                        <h3>Calories Intake Notes</h3>
                         <br>
                         <div class="d-flex d-sm-block d-md-flex align-items-center">
                           <h4 class="mb-0"> There was an increase of restfulness today</h4>
