--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <!-- Layout styles -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" />
+    <link rel="shortcut icon" href="colby.svg" />
   </head>
   <body>
     <div class="container-scroller">
@@ -45,8 +45,8 @@
                     <a href="#" class="forgot-pass">Forgot password</a>
                   </div> -->
                   <br>
-                  <div class="text-center">
-                    <button type="submit" class="btn btn-primary btn-block enter-btn">Login</button>
+                  <div class="text-center" href="coach_dashboard.html">
+                    <a class="btn btn-primary btn-block enter-btn" href="coach_dashboard.html">Login</a>
                   </div>
                   <!-- <div class="d-flex">
                     <button class="btn btn-facebook mr-2 col">
