--- a/peak_view.html
+++ b/peak_view.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Corona Admin</title>
+    <title>Home</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.base.css">
@@ -20,7 +20,7 @@
     <!-- Layout styles -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" />
+    <link rel="shortcut icon" href="colby.svg" />
   </head>
   <body>
   <div class="container-fluid page-body-wrapper">
@@ -86,7 +86,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <button style="background-color: #520702; color: white;" > Log Out </button>
+                 <a class="btn btn-primary" href="login.html">Log Out</a>
               </li>
             </ul>
             <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
@@ -103,19 +103,19 @@
                   <input type="text" name="Search Teams.." placeholder="Search teams.." style="color: white; background-color: black;"> <!-- change style -->
                   <button type="submit" style="background-color: black; color: white;">Search</button>
                   <div class="card-body" style="max-height: 210px; overflow: scroll;">
-                    <div>Squash</div>
-                    <div>Ice Hockey (M)</div>
-                    <div>Field Hockey</div>
-                    <div>Tennis</div>
-                    <div>Basketball (M)</div>
-                    <div>BasketBall (W)</div>
-                    <div>Crew</div>
-                    <div>Lacrosse</div>
-                    <div>Football</div>
-                    <div>Soccer (M)</div>
-                    <div>Soccer (W)</div>
-                    <div>Track & Field</div>
-                    <div>Cross Country</div>
+                    <div><a href="coach_dashboard.html">Squash</a></div>
+                    <div><a href="coach_dashboard.html">Ice Hockey(W)</a></div>
+                    <div><a href="coach_dashboard.html">Field Hockey</a></div>
+                    <div><a href="coach_dashboard.html">Tennis</a></div>
+                    <div><a href="coach_dashboard.html">Basketball (m)</a></div>
+                    <div><a href="coach_dashboard.html">Basketball (W)</a></div>
+                    <div><a href="coach_dashboard.html">Crew</a></div>
+                    <div><a href="coach_dashboard.html">Lacrosse</a></div>
+                    <div><a href="coach_dashboard.html">Football</a></div>
+                    <div><a href=coach_dashboard.html>Soccer (M)</a></div>
+                    <div><a href="coach_dashboard.html">Soccer(W)</a></div>
+                    <div><a href="coach_dashboard.html">Track and Field</a></div>
+                    <div><a href="coach_dashboard.html">Cross Country</a></div>
                   </div>
                 </div>
               </div>
