--- a/permission.html
+++ b/permission.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Corona Admin</title>
+    <title>Permissions</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.base.css">
@@ -20,7 +20,7 @@
     <!-- Layout styles -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" />
+    <link rel="shortcut icon" href="colby.svg" />
   </head>
   <body>
   <div class="container-fluid page-body-wrapper">
@@ -32,6 +32,9 @@
               <li class="nav-item">
                 <img src="assets/images/mule.jpg" width="80" height="50">
               </li>
+                <li class="nav-item">
+                    <a class="btn btn-primary" href="coach_dashboard.html">Back</a>
+                </li>
             </ul>
 
             <ul class="navbar-nav navbar-nav-right">
@@ -86,7 +89,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <button style="background-color: #520702; color: white;" > Log Out </button>
+                <a class="btn btn-primary" href="login.html">Log Out</a>
               </li>
             </ul>
             <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
