--- a/permission.html
+++ b/permission.html
@@ -20,7 +20,7 @@
     <!-- Layout styles -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" />
+    <link rel="shortcut icon" href="colby.svg" />
   </head>
   <body>
   <div class="container-fluid page-body-wrapper">
@@ -29,9 +29,12 @@
           <div class="navbar-menu-wrapper flex-grow d-flex align-items-stretch">
 
             <ul class="navbar-nav navbar-nav-left">
-              <li class="nav-item">
-                <img src="assets/images/mule.jpg" width="80" height="50">
+              <li><a href="peak_view.html" class="btn btn-primary">Back</a></li>
+                <li class="nav-item border-left">
+                <img src="assets/images/mule.jpg" width="40" height="25">
+                  
               </li>
+                
             </ul>
 
             <ul class="navbar-nav navbar-nav-right">
@@ -86,7 +89,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <button style="background-color: #520702; color: white;" > Log Out </button>
+                <a href="login.html" class="btn btn-primary">Log Out</a>
               </li>
             </ul>
             <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
@@ -173,6 +176,7 @@
               </div>
             </div>
           </div>
+      </div>
       </div>
       <script src="assets/vendors/js/vendor.bundle.base.js"></script>
     <!-- endinject -->
