--- a/athleteCoachView.html
+++ b/athleteCoachView.html
@@ -145,7 +145,7 @@
               <div class="col-sm-6 grid-margin">
                 <div class="card">
                   <div class="card-body">
-                    <h5>Readiness</h5>
+                    <h5><a href="restfulnessView.html">Readiness</a></h5>
                     <div class="row">
                       <div class="col-8 col-sm-12 col-xl-6 my-auto">
                         <div class="d-flex d-sm-block d-md-flex align-items-center">
@@ -199,7 +199,7 @@ const readyChart = new Chart(ctx5, {
                 <!-- Sleep chart -->
                 <div class="card">
                   <div class="card-body">
-                    <h5>Sleep</h5>
+                    <h5><a href="sleepView.html">Sleep</a></h5>
                     <div class="row">
                       <div class="col-8 col-sm-12 col-xl-12 my-auto">
                         <div class="d-flex d-sm-block d-md-flex align-items-center">
@@ -299,7 +299,7 @@ const recChart = new Chart(ctx7, {
                   <div class="card-body">
 
                     <!-- Caloroes chart -->
-                    <h5>Calories</h5>
+                    <h5><a href="caloriesView.html">Calories</a></h5>
                     <div class="row">
                       <div class="col-8 col-sm-12 col-xl-12 my-auto">
                         <div class="d-flex d-sm-block d-md-flex align-items-center">
