--- a/login.html
+++ b/login.html
@@ -31,11 +31,11 @@
                 <form>
                   <div class="form-group">
                     <label>Username or email *</label>
-                    <input type="text" class="form-control p_input">
+                    <input type="text" class="form-control p_input" style="color: white;">
                   </div>
                   <div class="form-group">
                     <label>Password *</label>
-                    <input type="text" class="form-control p_input">
+                    <input type="password" class="form-control p_input" style="color:white;">
                   </div>
                   <!-- <div class="form-group d-flex align-items-center justify-content-between">
                     <div class="form-check">
