--- a/admin_view.html
+++ b/admin_view.html
@@ -20,7 +20,7 @@
     <!-- Layout styles -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" />
+    <link rel="shortcut icon" href="colby.svg" />
   </head>
   <body>
   <div class="container-fluid page-body-wrapper">
@@ -86,7 +86,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <button style="background-color: #520702; color: white;" > Log Out </button>
+                <a class="btn btn-primary" href="login.html">Log Out</a>
               </li>
             </ul>
             <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
@@ -195,9 +195,9 @@
             <div class="col-xl-3 col-sm-6 grid-margin stretch-card">
               <div class="card">
                 <div class="card-body">
-                  <div> <button style="background-color: black; color: white;"> Reports </button> </div>
+                  <div> <a class="btn btn-primary">Reports</a> </div>
                   <br>
-                  <div> <button button style="background-color: black; color: white;"> Edit Permissions </button> </div>
+                  <div> <a class="btn btn-primary" href="athleteCoachView.html">Edit Permissions</a> </div>
                   
                 </div>
               </div>
