--- a/admin_view.html
+++ b/admin_view.html
@@ -197,7 +197,7 @@
                 <div class="card-body">
                   <div> <a class="btn btn-primary">Reports</a> </div>
                   <br>
-                  <div> <a class="btn btn-primary" href="athleteCoachView.html">Edit Permissions</a> </div>
+                  <div> <a class="btn btn-primary" href="permission.html">Edit Permissions</a> </div>
                   
                 </div>
               </div>
